--- a/composer.json
+++ b/composer.json
@@ -1,48 +1,51 @@
 {
-    "name": "rockbuzz/lara-utils",
-    "description": "Lara Utils",
-    "keywords": [
-        "utils"
-    ],
-    "license": "MIT",
-    "authors": [
-        {
-            "name": "Tiago Lopes",
-            "email": "tiago@rockbuzz.com.br"
-        },
-        {
-            "name": "Paulo Henrique",
-            "email": "paulo@rockbuzz.com.br"
-        }
-    ],
-    "autoload": {
-        "psr-4": {
-            "Rockbuzz\\LaraUtils\\": "src/"
-        }
+  "name": "rockbuzz/lara-utils",
+  "description": "Lara Utils",
+  "keywords": [
+    "utils"
+  ],
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "Tiago Lopes",
+      "email": "tiago@rockbuzz.com.br"
     },
-    "autoload-dev": {
-        "psr-4": {
-            "Tests\\": "tests/"
-        }
-    },
-    "require": {
-        "php": ">=7.4"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "^9.0",
-        "orchestra/testbench": "^6.0",
-        "squizlabs/php_codesniffer": "^3.0",
-        "laravel/legacy-factories": "^1.0.4"
-    },
-    "scripts": {
-        "test": "vendor/bin/phpunit",
-        "cs": "vendor/bin/phpcs"
-    },
-    "extra": {
-        "laravel": {
-            "providers": [
-                "Rockbuzz\\LaraUtils\\ServiceProvider"
-            ]
-        }
+    {
+      "name": "Paulo Henrique",
+      "email": "paulo@rockbuzz.com.br"
     }
+  ],
+  "autoload": {
+    "psr-4": {
+      "Rockbuzz\\LaraUtils\\": "src/"
+    },
+    "files": [
+      "src/helpers.php"
+    ]
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Tests\\": "tests/"
+    }
+  },
+  "require": {
+    "php": ">=7.4"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^9.0",
+    "orchestra/testbench": "^6.0",
+    "squizlabs/php_codesniffer": "^3.0",
+    "laravel/legacy-factories": "^1.0.4"
+  },
+  "scripts": {
+    "test": "vendor/bin/phpunit",
+    "cs": "vendor/bin/phpcs"
+  },
+  "extra": {
+    "laravel": {
+      "providers": [
+        "Rockbuzz\\LaraUtils\\ServiceProvider"
+      ]
+    }
+  }
 }
