chore: melhorado funcionalidade de schemaless e adicionado cobertura de testes.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,3 +8,19 @@ services:
     restart: always
     volumes:
       - ./:/var/www
+    networks:
+      - utilsnet
+  dbutils:
+    image: mariadb:10.3
+    container_name: dbutils
+    tmpfs: /var/lib/mysql
+    environment:
+      - "MYSQL_ALLOW_EMPTY_PASSWORD=true"
+      - "MYSQL_DATABASE=testing"
+      - "MYSQL_USER=testing"
+      - "MYSQL_PASSWORD=secret"
+    networks:
+      - utilsnet
+networks:
+  utilsnet:
+    driver: bridge
