--- a/composer.json
+++ b/composer.json
@@ -29,14 +29,14 @@
     }
   },
   "require": {
-    "php": ">=7.4",
+    "php": ">=8.1",
     "ext-json": "*"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.0",
-    "orchestra/testbench": "^6.0",
+    "orchestra/testbench": "^7.0",
     "squizlabs/php_codesniffer": "^3.0",
-    "laravel/legacy-factories": "^1.0.4"
+    "laravel/legacy-factories": "^v1.0"
   },
   "scripts": {
     "test": "vendor/bin/phpunit",
